# environment

examples/: CMakeLists.txt
examples/environment/: CMakeLists.txt
examples/environment/include/: all.hpp
examples/environment/src/: debug.cpp  main.cpp
include/prosto/: environment_all.hpp
include/prosto/environment/: debug.hpp
