cmake_minimum_required (VERSION 3.1)
project(prosto_examples)

include_directories("../include/")

# put subprojects here
#add_subdirectory(chrono)
add_subdirectory(environment)
#add_subdirectory(exception)
#add_subdirectory(extension)
#add_subdirectory(librarian)
#add_subdirectory(scripture)
#add_subdirectory(utility)
